# rune

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  lefthook.yml
src/: app.rs  keybind.rs  main.rs  theme.rs
src/git/: diff.rs  mod.rs
src/tui/: mod.rs
src/tui/panels/: commitlog.rs  dialog.rs  diff.rs  mod.rs  tree.rs
