[package]
name = "rune"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
